# Scoper-Strategic-Nexus

./: .gitignore  MANIFEST.in  README.md  project_vars.yaml  pyproject.toml  run_generator.py  setup.py
output/: Premium_Enterprise_Compliance_Scope.html
src/scoper/: __init__.py  cli.py  config.py  core.py  data_provider.py  downloader.py  export.py  generator.py  nexus.py  omni.py  pipeline.py  sow.py  templates.py  tui.py  validator.py  variables.py  visuals.py
src/scoper/assets/: style.css
src/scoper/config/: theme.yaml
src/scoper/data/compliance/: frameworks.json  packs.json
src/scoper/data/intelligence/: actors.json
src/scoper/data/matrix/: custody.json  master-matrix.json  nexus-radar.json  omni-matrix.json  raci.json
src/scoper/data/regulatory/: detailed-guidance.json
src/scoper/data/services/: assessment-types.json  catalog.json  catalog.json.raw
src/scoper/templates/: ASSET_INVENTORY_TEMPLATE.md  BANK_WIDE_SCOPING_WORKBOOK_TEMPLATE.md  COMPLIANCE_CHECKLIST.md  COMPLIANCE_SCOPE_TEMPLATE.md  COMPREHENSIVE_ASSESSMENT_SCOPING_WORKBOOK_v2_4.html  FINDING_TRACKER_TEMPLATE.md  GLOBAL_COMPLIANCE_SCOPE.html  MODULE_API.md  MODULE_AUTH.md  RULES_OF_ENGAGEMENT_TEMPLATE.md  SCOPE_STATEMENT_TEMPLATE.md  SECURITY_ASSESSMENT_SCOPING_PACK_v3_11_FIT_FOR_PURPOSE.html  SOW.md  base.html
tests/: test_cli.py  test_config.py  test_data_validation.py  test_export.py  test_generator.py  test_sow.py  test_sow_extended.py  test_templates.py  test_variables.py
